<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:checkable="true"
    android:layout_margin="8dp"
    android:backgroundTint="?attr/colorButtonNormal"
    android:id="@+id/card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title, secondary and supporting text -->
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/title_costumers"
            android:textAppearance="?attr/textAppearanceHeadline6"
            />
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_price"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            />
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_date"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_paid"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="end|center_vertical"
        android:src="@drawable/ic_cash_check_56dp"
        android:contentDescription="@string/title_sales" />

</com.google.android.material.card.MaterialCardView>