<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sales.addSale.AddSaleActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_name_costumer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_add_costumer_24">

        <AutoCompleteTextView
            android:id="@+id/et_name_costumer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_name_costumer"
            android:inputType="textCapWords"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_price"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/rg_moneda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_name_costumer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:digits="0123456789.,"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/text_price"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_moneda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_name_costumer"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_dolar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/symbol_dolar"/>

        <RadioButton
            android:id="@+id/rb_bolivar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/symbol_bolivar"
            android:checked="true"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_quantity"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_invoice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guide_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_invoice_number"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide_line"
        app:layout_constraintTop_toBottomOf="@id/tf_price"
        app:startIconDrawable="@drawable/ic_date_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_date"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_invoice_paid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_rg_invoice_paid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide_line"
        app:layout_constraintTop_toBottomOf="@+id/tf_date"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/rg_invoice_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide_line"
        app:layout_constraintTop_toBottomOf="@id/tv_invoice_paid">

        <RadioButton
            android:id="@+id/rb_paid_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_no"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_paid_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_yes" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>