<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/constraint"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground">

    <ImageButton
        android:id="@+id/ib_delete_item"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/size_btn_item_list"
        android:layout_height="@dimen/size_btn_item_list"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/btn_cancel"
        android:src="@drawable/ic_delete_item_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintEnd_toStartOf="@+id/tv_price"
        app:layout_constraintStart_toEndOf="@+id/ib_delete_item"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/text_product" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/text_price" />

    <TextView
        android:id="@+id/tv_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintEnd_toStartOf="@+id/tv_price_quantity"
        app:layout_constraintStart_toEndOf="@+id/ib_delete_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_item"
        tools:text="@string/text_unit" />

    <TextView
        android:id="@+id/tv_price_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price"
        tools:text="@string/text_price" />
</androidx.constraintlayout.widget.ConstraintLayout>